# stoat_chat

./: .gitignore  README.md  stoat_chat.xcf  store.yaml
clients/flutter/: README.md  pubspec.yaml
clients/flutter/android/app/: build.gradle
clients/flutter/lib/: main.dart
clients/flutter/lib/screens/: chat.dart
clients/flutter/lib/util/: auth.dart
clients/flutter/linux/: CMakeLists.txt  my_application.cc
clients/flutter/test/: widget_test.dart
clients/flutter/web/: manifest.json
clients/stoat_chat_flutter/: pubspec.yaml
clients/stoat_chat_flutter/lib/: main.dart
clients/stoat_chat_flutter/linux/: CMakeLists.txt  my_application.cc
clients/stoat_chat_flutter/web/: index.html
clients/stoat_chat_gjs/: .directory  README.md  com.pyrareae.stoatchatgjs.json  meson.build
clients/stoat_chat_gjs/data/: com.pyrareae.stoatchatgjs.desktop.in  com.pyrareae.stoatchatgjs.gschema.xml  com.pyrareae.stoatchatgjs.metainfo.xml.in  meson.build
clients/stoat_chat_gjs/po/: POTFILES  meson.build
clients/stoat_chat_gjs/src/: com.pyrareae.stoatchatgjs.data.gresource.xml  com.pyrareae.stoatchatgjs.src.gresource.xml  main.js  meson.build  window.js  window.ui
clients/stoat_chat_qml_kirigami/: CMakeLists.txt  org.kde.stoat_chat_qml_kirigami.desktop  org.kde.stoat_chat_qml_kirigami.json  org.kde.stoat_chat_qml_kirigami.metainfo.xml  stoat_chat_qml_kirigami.kdev4
clients/stoat_chat_qml_kirigami/.kdev4/: stoat_chat_qml_kirigami.kdev4
clients/stoat_chat_qml_kirigami/android/: AndroidManifest.xml
clients/stoat_chat_qml_kirigami/src/: CMakeLists.txt  app.cpp  app.h  main.cpp  message.h  stoat_chat_qml_kirigamiconfig.kcfgc
clients/stoat_chat_qml_kirigami/src/contents/ui/: About.qml  main.qml
clients/stoat_chat_simple_ruby_cli/: .rubocop.yml  Gemfile  stoat_chat.rb
servers/cpp-uwebsockets/: CMakeLists.txt
servers/ruby-iodine-nodb/: Gemfile  readme.md  start.rb  stoat_chat.rb
servers/ruby-iodine-sequel/: .rubocop.yml  Gemfile  config.ru  readme.md  stoat_chat.rb
(+15 files in other folders)
